Preliminar version of unifying script

--- a/Notebooks/2_initialFileAnalysis.ipynb
+++ b/Notebooks/2_initialFileAnalysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
        "freq            28       66         21"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +464,7 @@
        "Turkey      FutbolLigi1    2003-2004  2017-2018    14"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -534,6 +534,16 @@
       "SJH         109\n",
       "SJD         109\n",
       "GBH          96\n",
+      "GBA          96\n",
+      "GBD          96\n",
+      "AR           95\n",
+      "HR           95\n",
+      "HY           95\n",
+      "AY           95\n",
+      "HS           93\n",
+      "AS           93\n",
+      "HC           92\n",
+      "AC           92\n",
       "Name: column, dtype: int64\n"
      ]
     }
@@ -541,7 +551,7 @@
    "source": [
     "cols_count = dscols[\"column\"].value_counts()\n",
     "print (\"Columns with information for allmost all files:\")\n",
-    "print (cols_count.head(50))"
+    "print (cols_count.head(60))"
    ]
   },
   {
