--- a/Notebooks/4_unifyingFiles.ipynb
+++ b/Notebooks/4_unifyingFiles.ipynb
@@ -28,11 +28,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pathori = \"../Data/Raw/\"\n",
+    "pathori = \"../Data/Raw/Main/\"\n",
     "pathtemp = \"../Data/Interim/\"\n",
     "pathdest = \"../Data/Processed/\""
    ]
@@ -628,7 +628,8 @@
     "        competition = file.split(\"_\")[0]\n",
     "        season_short = (file.split(\"_\")[1]).split(\".\")[0]\n",
     "        season = \"20\" + season_short[0:2] + \"-\" + \"20\" + season_short[2:4]\n",
-    "        print folder+\"/\"+file"
+    "        print folder+\"/\"+file\n",
+    "        \n"
    ]
   },
   {
@@ -637,7 +638,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url=\"../Data/Raw/\" + folder + \"/\" + file\n",
+    "folder = \"England\"\n",
+    "file = \"Championship\"\n",
+    "url = pathori + folder + \"/\" + file\n",
     "parse_dates=[\"Date\"]\n",
     "ds = pd.read_csv(url, parse_dates=parse_dates)"
    ]
@@ -820,9 +823,51 @@
     }
    ],
    "source": [
-    "ds2 = ds[[\"Div\", \"Date\", \"HomeTeam\", \"AwayTeam\", \"FTHG\", \"FTAG\", \"FTR\", \"B365H\", \"B365D\", \"B365A\",\"BWH\",\"BWD\",\"BWA\" ]]\n",
+    "ds2 = ds[[\"Div\", \"Date\", \"HomeTeam\", \"AwayTeam\", \"FTHG\", \"FTAG\",\\\n",
+    "          \"FTR\", \"B365H\", \"B365D\", \"B365A\",\"BSH\",\"BSD\",\"BSA\",\\\n",
+    "          \"BWH\",\"BWD\",\"BWA\",\"GBH\",\"GBD\",\"GBA\",\"IWH\",\"IWD\",\"IWA\"\\\n",
+    "          \"LBH\",\"LBD\",\"LBA\",\"SJH\",\"SJD\",\"SJA\",\"VCH\",\"VCD\",\"VCA\"\\\n",
+    "          \"WHH\", \"WHD\", \"WHA\"]]\n",
     "print ds2.shape\n",
-    "ds2.head(5)"
+    "ds2.head(5)\n",
+    "\"\"\"\n",
+    "BSH = Blue Square home win odds: ?\n",
+    "BSD = Blue Square draw odds\n",
+    "BSA = Blue Square away win odds\n",
+    "BWH = Bet&Win home win odds: 152\n",
+    "BWD = Bet&Win draw odds\n",
+    "BWA = Bet&Win away win odds\n",
+    "GBH = Gamebookers home win odds: 96\n",
+    "GBD = Gamebookers draw odds\n",
+    "GBA = Gamebookers away win odds\n",
+    "IWH = Interwetten home win odds: 155\n",
+    "IWD = Interwetten draw odds\n",
+    "IWA = Interwetten away win odds\n",
+    "LBH = Ladbrokes home win odds: 155\n",
+    "LBD = Ladbrokes draw odds\n",
+    "LBA = Ladbrokes away win odds\n",
+    "PSH and PH = Pinnacle home win odds: ?\n",
+    "PSD and PD = Pinnacle draw odds\n",
+    "PSA and PA = Pinnacle away win odds\n",
+    "SOH = Sporting Odds home win odds: ?\n",
+    "SOD = Sporting Odds draw odds\n",
+    "SOA = Sporting Odds away win odds\n",
+    "SBH = Sportingbet home win odds: ?\n",
+    "SBD = Sportingbet draw odds\n",
+    "SBA = Sportingbet away win odds\n",
+    "SJH = Stan James home win odds: 109\n",
+    "SJD = Stan James draw odds\n",
+    "SJA = Stan James away win odds\n",
+    "SYH = Stanleybet home win odds: ?\n",
+    "SYD = Stanleybet draw odds\n",
+    "SYA = Stanleybet away win odds\n",
+    "VCH = VC Bet home win odds: 149\n",
+    "VCD = VC Bet draw odds\n",
+    "VCA = VC Bet away win odds\n",
+    "WHH = William Hill home win odds: 155\n",
+    "WHD = William Hill draw odds\n",
+    "WHA = William Hill away win odds\n",
+    "\"\"\""
    ]
   },
   {
