--- a/Notebooks/4_unifyingFiles.ipynb
+++ b/Notebooks/4_unifyingFiles.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,13 +28,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "pathori = \"../Data/Raw/Main/\"\n",
     "pathtemp = \"../Data/Interim/\"\n",
     "pathdest = \"../Data/Processed/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "colsdest = [\"Div\", \"Date\", \"HomeTeam\", \"AwayTeam\", \"FTHG\", \"FTAG\",\\\n",
+    "          \"FTR\", \"B365H\", \"B365D\", \"B365A\",\"BSH\",\"BSD\",\"BSA\",\\\n",
+    "          \"BWH\",\"BWD\",\"BWA\",\"GBH\",\"GBD\",\"GBA\",\"IWH\",\"IWD\",\"IWA\"\\\n",
+    "          \"LBH\",\"LBD\",\"LBA\",\"SJH\",\"SJD\",\"SJA\",\"VCH\",\"VCD\",\"VCA\"\\\n",
+    "          \"WHH\", \"WHD\", \"WHA\"]"
    ]
   },
   {
@@ -634,12 +647,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "folder = \"England\"\n",
-    "file = \"Championship\"\n",
+    "country = \"Netherlands\"\n",
+    "folder = \"Netherlands\"\n",
+    "file = \"Eredivisie_1617.csv\"\n",
     "url = pathori + folder + \"/\" + file\n",
     "parse_dates=[\"Date\"]\n",
     "ds = pd.read_csv(url, parse_dates=parse_dates)"
@@ -647,190 +661,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  Div       Date    HomeTeam   AwayTeam  FTHG  FTAG FTR  HTHG  HTAG HTR  ...   \\\n",
-      "0  T1 2017-11-08  Buyuksehyr  Bursaspor     1     0   H     1     0   H  ...    \n",
-      "\n",
-      "   BbAv<2.5  BbAH  BbAHh  BbMxAHH  BbAvAHH  BbMxAHA  BbAvAHA  PSCH  PSCD  PSCA  \n",
-      "0      2.17    14  -1.25     1.91     1.86     2.05      2.0  1.46  4.86  7.42  \n",
-      "\n",
-      "[1 rows x 64 columns]\n"
+      "['Div', 'Date', 'HomeTeam', 'AwayTeam', 'FTHG', 'FTAG', 'FTR', 'HTHG', 'HTAG', 'HTR', 'B365H', 'B365D', 'B365A', 'BWH', 'BWD', 'BWA', 'IWH', 'IWD', 'IWA', 'LBH', 'LBD', 'LBA', 'PSH', 'PSD', 'PSA', 'WHH', 'WHD', 'WHA', 'VCH', 'VCD', 'VCA', 'Bb1X2', 'BbMxH', 'BbAvH', 'BbMxD', 'BbAvD', 'BbMxA', 'BbAvA', 'BbOU', 'BbMx>2.5', 'BbAv>2.5', 'BbMx<2.5', 'BbAv<2.5', 'BbAH', 'BbAHh', 'BbMxAHH', 'BbAvAHH', 'BbMxAHA', 'BbAvAHA', 'PSCH', 'PSCD', 'PSCA']\n"
      ]
     }
    ],
    "source": [
-    "print ds.head(1)"
+    "colsori = list(ds)\n",
+    "print colsori"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(306, 13)\n"
+      "Column to add: BSH\n",
+      "Column to add: BSD\n",
+      "Column to add: BSA\n",
+      "Column to add: GBH\n",
+      "Column to add: GBD\n",
+      "Column to add: GBA\n",
+      "Column to add: IWALBH\n",
+      "Column to add: SJH\n",
+      "Column to add: SJD\n",
+      "Column to add: SJA\n",
+      "Column to add: VCAWHH\n"
+     ]
+    }
+   ],
+   "source": [
+    "for coldest in colsdest:\n",
+    "    if coldest not in colsori:\n",
+    "        print (\"Column to add: \" + coldest)\n",
+    "        ds[coldest] = \"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Div', 'Date', 'HomeTeam', 'AwayTeam', 'FTHG', 'FTAG', 'FTR', 'B365H', 'B365D', 'B365A', 'BSH', 'BSD', 'BSA', 'BWH', 'BWD', 'BWA', 'GBH', 'GBD', 'GBA', 'IWH', 'IWD', 'IWALBH', 'LBD', 'LBA', 'SJH', 'SJD', 'SJA', 'VCH', 'VCD', 'VCAWHH', 'WHD', 'WHA']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print colsdest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(306, 32)\n"
      ]
     },
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Div</th>\n",
-       "      <th>Date</th>\n",
-       "      <th>HomeTeam</th>\n",
-       "      <th>AwayTeam</th>\n",
-       "      <th>FTHG</th>\n",
-       "      <th>FTAG</th>\n",
-       "      <th>FTR</th>\n",
-       "      <th>B365H</th>\n",
-       "      <th>B365D</th>\n",
-       "      <th>B365A</th>\n",
-       "      <th>BWH</th>\n",
-       "      <th>BWD</th>\n",
-       "      <th>BWA</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>T1</td>\n",
-       "      <td>2017-11-08</td>\n",
-       "      <td>Buyuksehyr</td>\n",
-       "      <td>Bursaspor</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>H</td>\n",
-       "      <td>1.36</td>\n",
-       "      <td>4.75</td>\n",
-       "      <td>8.50</td>\n",
-       "      <td>1.40</td>\n",
-       "      <td>4.25</td>\n",
-       "      <td>7.75</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>T1</td>\n",
-       "      <td>2017-12-08</td>\n",
-       "      <td>Akhisar Belediyespor</td>\n",
-       "      <td>Sivasspor</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>H</td>\n",
-       "      <td>2.00</td>\n",
-       "      <td>3.40</td>\n",
-       "      <td>3.75</td>\n",
-       "      <td>2.05</td>\n",
-       "      <td>3.25</td>\n",
-       "      <td>3.50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>T1</td>\n",
-       "      <td>2017-12-08</td>\n",
-       "      <td>Alanyaspor</td>\n",
-       "      <td>Kasimpasa</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>A</td>\n",
-       "      <td>2.15</td>\n",
-       "      <td>3.40</td>\n",
-       "      <td>3.30</td>\n",
-       "      <td>2.20</td>\n",
-       "      <td>3.40</td>\n",
-       "      <td>3.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>T1</td>\n",
-       "      <td>2017-12-08</td>\n",
-       "      <td>Genclerbirligi</td>\n",
-       "      <td>Karabukspor</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>D</td>\n",
-       "      <td>2.00</td>\n",
-       "      <td>3.50</td>\n",
-       "      <td>3.60</td>\n",
-       "      <td>1.90</td>\n",
-       "      <td>3.30</td>\n",
-       "      <td>4.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>T1</td>\n",
-       "      <td>2017-12-08</td>\n",
-       "      <td>Goztep</td>\n",
-       "      <td>Fenerbahce</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>D</td>\n",
-       "      <td>4.75</td>\n",
-       "      <td>3.60</td>\n",
-       "      <td>1.73</td>\n",
-       "      <td>4.75</td>\n",
-       "      <td>3.60</td>\n",
-       "      <td>1.70</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "  Div       Date              HomeTeam     AwayTeam  FTHG  FTAG FTR  B365H  \\\n",
-       "0  T1 2017-11-08            Buyuksehyr    Bursaspor     1     0   H   1.36   \n",
-       "1  T1 2017-12-08  Akhisar Belediyespor    Sivasspor     1     0   H   2.00   \n",
-       "2  T1 2017-12-08            Alanyaspor    Kasimpasa     1     3   A   2.15   \n",
-       "3  T1 2017-12-08        Genclerbirligi  Karabukspor     1     1   D   2.00   \n",
-       "4  T1 2017-12-08                Goztep   Fenerbahce     2     2   D   4.75   \n",
-       "\n",
-       "   B365D  B365A   BWH   BWD   BWA  \n",
-       "0   4.75   8.50  1.40  4.25  7.75  \n",
-       "1   3.40   3.75  2.05  3.25  3.50  \n",
-       "2   3.40   3.30  2.20  3.40  3.00  \n",
-       "3   3.50   3.60  1.90  3.30  4.00  \n",
-       "4   3.60   1.73  4.75  3.60  1.70  "
+       "'\\nBSH = Blue Square home win odds: ?\\nBSD = Blue Square draw odds\\nBSA = Blue Square away win odds\\nBWH = Bet&Win home win odds: 152\\nBWD = Bet&Win draw odds\\nBWA = Bet&Win away win odds\\nGBH = Gamebookers home win odds: 96\\nGBD = Gamebookers draw odds\\nGBA = Gamebookers away win odds\\nIWH = Interwetten home win odds: 155\\nIWD = Interwetten draw odds\\nIWA = Interwetten away win odds\\nLBH = Ladbrokes home win odds: 155\\nLBD = Ladbrokes draw odds\\nLBA = Ladbrokes away win odds\\nPSH and PH = Pinnacle home win odds: ?\\nPSD and PD = Pinnacle draw odds\\nPSA and PA = Pinnacle away win odds\\nSOH = Sporting Odds home win odds: ?\\nSOD = Sporting Odds draw odds\\nSOA = Sporting Odds away win odds\\nSBH = Sportingbet home win odds: ?\\nSBD = Sportingbet draw odds\\nSBA = Sportingbet away win odds\\nSJH = Stan James home win odds: 109\\nSJD = Stan James draw odds\\nSJA = Stan James away win odds\\nSYH = Stanleybet home win odds: ?\\nSYD = Stanleybet draw odds\\nSYA = Stanleybet away win odds\\nVCH = VC Bet home win odds: 149\\nVCD = VC Bet draw odds\\nVCA = VC Bet away win odds\\nWHH = William Hill home win odds: 155\\nWHD = William Hill draw odds\\nWHA = William Hill away win odds\\n'"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ds2 = ds[[\"Div\", \"Date\", \"HomeTeam\", \"AwayTeam\", \"FTHG\", \"FTAG\",\\\n",
-    "          \"FTR\", \"B365H\", \"B365D\", \"B365A\",\"BSH\",\"BSD\",\"BSA\",\\\n",
-    "          \"BWH\",\"BWD\",\"BWA\",\"GBH\",\"GBD\",\"GBA\",\"IWH\",\"IWD\",\"IWA\"\\\n",
-    "          \"LBH\",\"LBD\",\"LBA\",\"SJH\",\"SJD\",\"SJA\",\"VCH\",\"VCD\",\"VCA\"\\\n",
-    "          \"WHH\", \"WHD\", \"WHA\"]]\n",
+    "ds2 = ds[colsdest]\n",
     "print ds2.shape\n",
     "ds2.head(5)\n",
-    "\"\"\"\n",
+    "'''\n",
     "BSH = Blue Square home win odds: ?\n",
     "BSD = Blue Square draw odds\n",
     "BSA = Blue Square away win odds\n",
@@ -867,19 +788,19 @@
     "WHH = William Hill home win odds: 155\n",
     "WHD = William Hill draw odds\n",
     "WHA = William Hill away win odds\n",
-    "\"\"\""
+    "'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(306, 13)\n"
+      "(306, 32)\n"
      ]
     }
    ],
@@ -890,167 +811,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Div</th>\n",
-       "      <th>Date</th>\n",
-       "      <th>HomeTeam</th>\n",
-       "      <th>AwayTeam</th>\n",
-       "      <th>FTHG</th>\n",
-       "      <th>FTAG</th>\n",
-       "      <th>FTR</th>\n",
-       "      <th>B365H</th>\n",
-       "      <th>B365D</th>\n",
-       "      <th>B365A</th>\n",
-       "      <th>BWH</th>\n",
-       "      <th>BWD</th>\n",
-       "      <th>BWA</th>\n",
-       "      <th>Country</th>\n",
-       "      <th>Season</th>\n",
-       "      <th>Competition</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>T1</td>\n",
-       "      <td>2017-11-08</td>\n",
-       "      <td>Buyuksehyr</td>\n",
-       "      <td>Bursaspor</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>H</td>\n",
-       "      <td>1.36</td>\n",
-       "      <td>4.75</td>\n",
-       "      <td>8.50</td>\n",
-       "      <td>1.40</td>\n",
-       "      <td>4.25</td>\n",
-       "      <td>7.75</td>\n",
-       "      <td>Turkey</td>\n",
-       "      <td>2017-2018</td>\n",
-       "      <td>FutbolLigi1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>T1</td>\n",
-       "      <td>2017-12-08</td>\n",
-       "      <td>Akhisar Belediyespor</td>\n",
-       "      <td>Sivasspor</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>H</td>\n",
-       "      <td>2.00</td>\n",
-       "      <td>3.40</td>\n",
-       "      <td>3.75</td>\n",
-       "      <td>2.05</td>\n",
-       "      <td>3.25</td>\n",
-       "      <td>3.50</td>\n",
-       "      <td>Turkey</td>\n",
-       "      <td>2017-2018</td>\n",
-       "      <td>FutbolLigi1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>T1</td>\n",
-       "      <td>2017-12-08</td>\n",
-       "      <td>Alanyaspor</td>\n",
-       "      <td>Kasimpasa</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>A</td>\n",
-       "      <td>2.15</td>\n",
-       "      <td>3.40</td>\n",
-       "      <td>3.30</td>\n",
-       "      <td>2.20</td>\n",
-       "      <td>3.40</td>\n",
-       "      <td>3.00</td>\n",
-       "      <td>Turkey</td>\n",
-       "      <td>2017-2018</td>\n",
-       "      <td>FutbolLigi1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>T1</td>\n",
-       "      <td>2017-12-08</td>\n",
-       "      <td>Genclerbirligi</td>\n",
-       "      <td>Karabukspor</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>D</td>\n",
-       "      <td>2.00</td>\n",
-       "      <td>3.50</td>\n",
-       "      <td>3.60</td>\n",
-       "      <td>1.90</td>\n",
-       "      <td>3.30</td>\n",
-       "      <td>4.00</td>\n",
-       "      <td>Turkey</td>\n",
-       "      <td>2017-2018</td>\n",
-       "      <td>FutbolLigi1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>T1</td>\n",
-       "      <td>2017-12-08</td>\n",
-       "      <td>Goztep</td>\n",
-       "      <td>Fenerbahce</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>D</td>\n",
-       "      <td>4.75</td>\n",
-       "      <td>3.60</td>\n",
-       "      <td>1.73</td>\n",
-       "      <td>4.75</td>\n",
-       "      <td>3.60</td>\n",
-       "      <td>1.70</td>\n",
-       "      <td>Turkey</td>\n",
-       "      <td>2017-2018</td>\n",
-       "      <td>FutbolLigi1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  Div       Date              HomeTeam     AwayTeam  FTHG  FTAG FTR  B365H  \\\n",
-       "0  T1 2017-11-08            Buyuksehyr    Bursaspor     1     0   H   1.36   \n",
-       "1  T1 2017-12-08  Akhisar Belediyespor    Sivasspor     1     0   H   2.00   \n",
-       "2  T1 2017-12-08            Alanyaspor    Kasimpasa     1     3   A   2.15   \n",
-       "3  T1 2017-12-08        Genclerbirligi  Karabukspor     1     1   D   2.00   \n",
-       "4  T1 2017-12-08                Goztep   Fenerbahce     2     2   D   4.75   \n",
-       "\n",
-       "   B365D  B365A   BWH   BWD   BWA Country     Season  Competition  \n",
-       "0   4.75   8.50  1.40  4.25  7.75  Turkey  2017-2018  FutbolLigi1  \n",
-       "1   3.40   3.75  2.05  3.25  3.50  Turkey  2017-2018  FutbolLigi1  \n",
-       "2   3.40   3.30  2.20  3.40  3.00  Turkey  2017-2018  FutbolLigi1  \n",
-       "3   3.50   3.60  1.90  3.30  4.00  Turkey  2017-2018  FutbolLigi1  \n",
-       "4   3.60   1.73  4.75  3.60  1.70  Turkey  2017-2018  FutbolLigi1  "
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'season' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-35-a7d938cc66b1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mds3\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Country\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcountry\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mds3\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Season\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mseason\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mds3\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Competition\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcompetition\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mds3\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'season' is not defined"
+     ]
     }
    ],
    "source": [
