unifying Script revision

--- a/Notebooks/4_unifyingFiles.ipynb
+++ b/Notebooks/4_unifyingFiles.ipynb
@@ -45,8 +45,8 @@
    "source": [
     "colsdest = [\"Div\", \"Date\", \"HomeTeam\", \"AwayTeam\", \"FTHG\", \"FTAG\",\\\n",
     "          \"FTR\", \"B365H\", \"B365D\", \"B365A\",\"BSH\",\"BSD\",\"BSA\",\\\n",
-    "          \"BWH\",\"BWD\",\"BWA\",\"GBH\",\"GBD\",\"GBA\",\"IWH\",\"IWD\",\"IWA\"\\\n",
-    "          \"LBH\",\"LBD\",\"LBA\",\"SJH\",\"SJD\",\"SJA\",\"VCH\",\"VCD\",\"VCA\"\\\n",
+    "          \"BWH\",\"BWD\",\"BWA\",\"GBH\",\"GBD\",\"GBA\",\"IWH\",\"IWD\",\"IWA\",\\\n",
+    "          \"LBH\",\"LBD\",\"LBA\",\"SJH\",\"SJD\",\"SJA\",\"VCH\",\"VCD\",\"VCA\",\\\n",
     "          \"WHH\", \"WHD\", \"WHA\"]"
    ]
   },
