Change of name of file: 2_consistencyFiles.ipynb -> 2_filesAnalysis-raw_to_correct.ipynb

--- a/BetsExploring2018/Notes/2_filesAnalysis-raw_to_correct.ipynb
+++ b/BetsExploring2018/Notes/2_filesAnalysis-raw_to_correct.ipynb
@@ -1,22 +1,21 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
-    "# Preliminar files analysis\n",
+    "# Data Mining project\n",
+    "## 2_filesAnalysis - raw_to_correct\n",
     "\n",
-    "# In this part we will describe quatity and distribution of original files,\n",
-    "# as first approach to initial data description"
+    "In this part we will describe quatity and distribution of original files, as first approach to initial data description.\n",
+    "We also will analyse fields in every file to select final fields to be included in dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -32,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -45,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -118,14 +117,8 @@
     "    for subfolder in os.listdir(pathori+folder):\n",
     "        competition = subfolder\n",
     "#        print ('    '+competition)\n",
-    "        #print (pathori+folder+\"/\"+file)\n",
-    "        #print (not os.path.isdir(pathori+folder+\"/\"+file))\n",
     "        \n",
     "        for file in os.listdir(pathori+'/'+folder+'/'+subfolder):\n",
-    "            # Store fiel information\n",
-    "            #print ('      '+file)\n",
-    "            #competition = file.split(\"_\")[0]\n",
-    "            #print (competition)\n",
     "            season_short = file.split(\".\")[0]\n",
     "            season = \"20\" + season_short[0:2] + \"-\" + \"20\" + season_short[2:4]\n",
     "#            print ('      '+season)\n",
@@ -133,7 +126,7 @@
     "        \n",
     "            # Store columns information\n",
     "            file_path = pathori+folder+\"/\"+subfolder+\"/\"+file\n",
-    "#        print (file_path)\n",
+    "#            print (file_path)\n",
     "            try:\n",
     "                ds = pd.read_csv(file_path)\n",
     "                season_list.append(season_info)   \n",
@@ -152,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -183,81 +176,46 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>145</th>\n",
+       "      <td>SerieA</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>2007-2008</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>107</th>\n",
+       "      <td>LeChampionnat</td>\n",
+       "      <td>France</td>\n",
+       "      <td>2012-2013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>103</th>\n",
+       "      <td>LeChampionnat</td>\n",
+       "      <td>France</td>\n",
+       "      <td>2008-2009</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>215</th>\n",
+       "      <td>Division2</td>\n",
+       "      <td>Scotland</td>\n",
+       "      <td>2004-2005</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>164</th>\n",
        "      <td>SerieB</td>\n",
        "      <td>Italy</td>\n",
        "      <td>2012-2013</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>124</th>\n",
-       "      <td>Liga1</td>\n",
-       "      <td>Germany</td>\n",
-       "      <td>2014-2015</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>95</th>\n",
-       "      <td>Division2</td>\n",
-       "      <td>France</td>\n",
-       "      <td>2015-2016</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>275</th>\n",
-       "      <td>Segunda</td>\n",
-       "      <td>Spain</td>\n",
-       "      <td>2008-2009</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>189</th>\n",
-       "      <td>Liga1</td>\n",
-       "      <td>Portugal</td>\n",
-       "      <td>2009-2010</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>244</th>\n",
-       "      <td>Premier</td>\n",
-       "      <td>Scotland</td>\n",
-       "      <td>2005-2006</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>270</th>\n",
-       "      <td>Primera</td>\n",
-       "      <td>Spain</td>\n",
-       "      <td>2016-2017</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>61</th>\n",
-       "      <td>League2</td>\n",
-       "      <td>England</td>\n",
-       "      <td>2009-2010</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>204</th>\n",
-       "      <td>Division1</td>\n",
-       "      <td>Scotland</td>\n",
-       "      <td>2009-2010</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>245</th>\n",
-       "      <td>Premier</td>\n",
-       "      <td>Scotland</td>\n",
-       "      <td>2006-2007</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    competition   country     season\n",
-       "164      SerieB     Italy  2012-2013\n",
-       "124       Liga1   Germany  2014-2015\n",
-       "95    Division2    France  2015-2016\n",
-       "275     Segunda     Spain  2008-2009\n",
-       "189       Liga1  Portugal  2009-2010\n",
-       "244     Premier  Scotland  2005-2006\n",
-       "270     Primera     Spain  2016-2017\n",
-       "61      League2   England  2009-2010\n",
-       "204   Division1  Scotland  2009-2010\n",
-       "245     Premier  Scotland  2006-2007"
+       "       competition   country     season\n",
+       "145         SerieA     Italy  2007-2008\n",
+       "107  LeChampionnat    France  2012-2013\n",
+       "103  LeChampionnat    France  2008-2009\n",
+       "215      Division2  Scotland  2004-2005\n",
+       "164         SerieB     Italy  2012-2013"
       ]
      },
      "metadata": {},
@@ -266,40 +224,12 @@
    ],
    "source": [
     "dsfiles = pd.DataFrame(season_list)\n",
-    "display (dsfiles.sample(10))"
+    "display (dsfiles.sample(5))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     column   competition   country\n",
-      "616      AC        SerieA     Italy\n",
-      "1000     AC       Premier  Scotland\n",
-      "495      AC         Liga1   Germany\n",
-      "67       AC  Championship   England\n",
-      "328      AC       Premier   England\n",
-      "192      AC       League1   England\n",
-      "124      AC    Conference   England\n",
-      "260      AC       League2   England\n",
-      "493      AF         Liga1   Germany\n",
-      "326      AF       Premier   England\n"
-     ]
-    }
-   ],
-   "source": [
-    "dscols = pd.DataFrame(cols_list).sort_values(\"column\")\n",
-    "print (dscols.head(10))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +275,7 @@
        "      <th>top</th>\n",
        "      <td>Division2</td>\n",
        "      <td>England</td>\n",
-       "      <td>2011-2012</td>\n",
+       "      <td>2014-2015</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>freq</th>\n",
@@ -361,11 +291,11 @@
        "       competition  country     season\n",
        "count          301      301        301\n",
        "unique          18       10         16\n",
-       "top      Division2  England  2011-2012\n",
+       "top      Division2  England  2014-2015\n",
        "freq            30       70         21"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +306,168 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>column</th>\n",
+       "      <th>competition</th>\n",
+       "      <th>country</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>616</th>\n",
+       "      <td>AC</td>\n",
+       "      <td>SerieA</td>\n",
+       "      <td>Italy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1000</th>\n",
+       "      <td>AC</td>\n",
+       "      <td>Premier</td>\n",
+       "      <td>Scotland</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>495</th>\n",
+       "      <td>AC</td>\n",
+       "      <td>Liga1</td>\n",
+       "      <td>Germany</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <td>AC</td>\n",
+       "      <td>Championship</td>\n",
+       "      <td>England</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>328</th>\n",
+       "      <td>AC</td>\n",
+       "      <td>Premier</td>\n",
+       "      <td>England</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     column   competition   country\n",
+       "616      AC        SerieA     Italy\n",
+       "1000     AC       Premier  Scotland\n",
+       "495      AC         Liga1   Germany\n",
+       "67       AC  Championship   England\n",
+       "328      AC       Premier   England"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "dscols = pd.DataFrame(cols_list).sort_values(\"column\")\n",
+    "display (dscols.head(5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>column</th>\n",
+       "      <th>competition</th>\n",
+       "      <th>country</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1189</td>\n",
+       "      <td>1189</td>\n",
+       "      <td>1189</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>117</td>\n",
+       "      <td>18</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>IWD</td>\n",
+       "      <td>Premier</td>\n",
+       "      <td>England</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>21</td>\n",
+       "      <td>136</td>\n",
+       "      <td>329</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       column competition  country\n",
+       "count    1189        1189     1189\n",
+       "unique    117          18       10\n",
+       "top       IWD     Premier  England\n",
+       "freq       21         136      329"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dscols.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +677,7 @@
        "Turkey      FutbolLigi1    2003-2004  2018-2019    15"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -607,56 +698,56 @@
      "text": [
       "Number of variables:  117\n",
       "Columns with information for allmost all files (country + competition):\n",
-      "WHA         21\n",
-      "HTHG        21\n",
-      "Date        21\n",
-      "Div         21\n",
-      "SBA         21\n",
-      "WHH         21\n",
-      "B365H       21\n",
-      "FTR         21\n",
-      "GBH         21\n",
-      "HTR         21\n",
-      "WHD         21\n",
-      "B365A       21\n",
-      "HTAG        21\n",
-      "IWA         21\n",
-      "GBA         21\n",
-      "GBD         21\n",
-      "HomeTeam    21\n",
-      "FTAG        21\n",
-      "SBD         21\n",
-      "FTHG        21\n",
-      "B365D       21\n",
-      "IWH         21\n",
-      "SBH         21\n",
       "IWD         21\n",
       "AwayTeam    21\n",
+      "SBD         21\n",
+      "IWA         21\n",
+      "HTAG        21\n",
+      "HTR         21\n",
+      "FTHG        21\n",
+      "HTHG        21\n",
+      "HomeTeam    21\n",
+      "B365D       21\n",
+      "Date        21\n",
+      "GBH         21\n",
+      "GBA         21\n",
+      "SBA         21\n",
+      "WHD         21\n",
+      "FTR         21\n",
+      "FTAG        21\n",
+      "WHH         21\n",
+      "Div         21\n",
+      "B365A       21\n",
+      "IWH         21\n",
+      "B365H       21\n",
+      "GBD         21\n",
+      "WHA         21\n",
+      "SBH         21\n",
       "LBA         19\n",
       "LBH         19\n",
       "LBD         19\n",
-      "BWD         14\n",
       "BWA         14\n",
+      "BWD         14\n",
       "BWH         14\n",
-      "BbMxD       10\n",
-      "VCA         10\n",
-      "BbMxA       10\n",
-      "VCH         10\n",
-      "VCD         10\n",
       "BbMxH       10\n",
-      "BbAvAHA     10\n",
-      "BbAvAHH     10\n",
-      "BbMx>2.5    10\n",
       "BbMx<2.5    10\n",
-      "BbAH        10\n",
-      "SJA         10\n",
-      "BbAvD       10\n",
-      "SJD         10\n",
-      "BbAHh       10\n",
-      "BbOU        10\n",
-      "BbAvH       10\n",
+      "BbMxAHA     10\n",
       "BbMxAHH     10\n",
-      "Bb1X2       10\n",
+      "BbAHh       10\n",
+      "BbAv>2.5    10\n",
+      "BbAH        10\n",
+      "BbAvD       10\n",
+      "BbMx>2.5    10\n",
+      "BbOU        10\n",
+      "BbAvAHH     10\n",
+      "BbMxD       10\n",
+      "BbAvAHA     10\n",
+      "SJH         10\n",
+      "SJD         10\n",
+      "SJA         10\n",
+      "BbMxA       10\n",
+      "BbAvA       10\n",
+      "VCH         10\n",
       "Name: column, dtype: int64\n"
      ]
     }
@@ -670,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +869,7 @@
        "10    B365H  JupilerLeague      Belgium"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,17 +882,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "WHH      21\n",
-       "B365H    21\n",
        "SBH      21\n",
        "IWH      21\n",
+       "B365H    21\n",
        "GBH      21\n",
+       "WHH      21\n",
        "LBH      19\n",
        "BWH      14\n",
        "SJH      10\n",
@@ -810,8 +901,9 @@
        "Name: column, dtype: int64"
       ]
      },
+     "execution_count": 17,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -820,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +1130,7 @@
        "WHH            4     2      1  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
