Fields data type analysis

--- a/BetsExploring2018/Notes/2_filesAnalysis-raw_to_correct.ipynb
+++ b/BetsExploring2018/Notes/2_filesAnalysis-raw_to_correct.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -176,46 +176,46 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>145</th>\n",
-       "      <td>SerieA</td>\n",
-       "      <td>Italy</td>\n",
-       "      <td>2007-2008</td>\n",
+       "      <th>40</th>\n",
+       "      <td>Conference</td>\n",
+       "      <td>England</td>\n",
+       "      <td>2015-2016</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>107</th>\n",
-       "      <td>LeChampionnat</td>\n",
-       "      <td>France</td>\n",
+       "      <th>120</th>\n",
+       "      <td>Liga1</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>2010-2011</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>JupilerLeague</td>\n",
+       "      <td>Belgium</td>\n",
        "      <td>2012-2013</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>103</th>\n",
-       "      <td>LeChampionnat</td>\n",
-       "      <td>France</td>\n",
-       "      <td>2008-2009</td>\n",
+       "      <th>277</th>\n",
+       "      <td>Segunda</td>\n",
+       "      <td>Spain</td>\n",
+       "      <td>2010-2011</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>215</th>\n",
-       "      <td>Division2</td>\n",
-       "      <td>Scotland</td>\n",
-       "      <td>2004-2005</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>164</th>\n",
-       "      <td>SerieB</td>\n",
-       "      <td>Italy</td>\n",
-       "      <td>2012-2013</td>\n",
+       "      <th>171</th>\n",
+       "      <td>Eredivisie</td>\n",
+       "      <td>Netherlands</td>\n",
+       "      <td>2003-2004</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       competition   country     season\n",
-       "145         SerieA     Italy  2007-2008\n",
-       "107  LeChampionnat    France  2012-2013\n",
-       "103  LeChampionnat    France  2008-2009\n",
-       "215      Division2  Scotland  2004-2005\n",
-       "164         SerieB     Italy  2012-2013"
+       "       competition      country     season\n",
+       "40      Conference      England  2015-2016\n",
+       "120          Liga1      Germany  2010-2011\n",
+       "8    JupilerLeague      Belgium  2012-2013\n",
+       "277        Segunda        Spain  2010-2011\n",
+       "171     Eredivisie  Netherlands  2003-2004"
       ]
      },
      "metadata": {},
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
        "      <th>top</th>\n",
        "      <td>Division2</td>\n",
        "      <td>England</td>\n",
-       "      <td>2014-2015</td>\n",
+       "      <td>2013-2014</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>freq</th>\n",
@@ -291,11 +291,11 @@
        "       competition  country     season\n",
        "count          301      301        301\n",
        "unique          18       10         16\n",
-       "top      Division2  England  2014-2015\n",
+       "top      Division2  England  2013-2014\n",
        "freq            30       70         21"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +434,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>top</th>\n",
-       "      <td>IWD</td>\n",
+       "      <td>IWH</td>\n",
        "      <td>Premier</td>\n",
        "      <td>England</td>\n",
        "    </tr>\n",
@@ -452,11 +452,11 @@
        "       column competition  country\n",
        "count    1189        1189     1189\n",
        "unique    117          18       10\n",
-       "top       IWD     Premier  England\n",
+       "top       IWH     Premier  England\n",
        "freq       21         136      329"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
        "Turkey      FutbolLigi1    2003-2004  2018-2019    15"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -698,56 +698,56 @@
      "text": [
       "Number of variables:  117\n",
       "Columns with information for allmost all files (country + competition):\n",
-      "IWD         21\n",
-      "AwayTeam    21\n",
-      "SBD         21\n",
-      "IWA         21\n",
-      "HTAG        21\n",
-      "HTR         21\n",
-      "FTHG        21\n",
-      "HTHG        21\n",
-      "HomeTeam    21\n",
-      "B365D       21\n",
-      "Date        21\n",
-      "GBH         21\n",
-      "GBA         21\n",
-      "SBA         21\n",
-      "WHD         21\n",
-      "FTR         21\n",
-      "FTAG        21\n",
+      "IWH         21\n",
       "WHH         21\n",
+      "HTR         21\n",
+      "B365H       21\n",
+      "HTHG        21\n",
+      "WHD         21\n",
+      "B365D       21\n",
+      "FTHG        21\n",
+      "IWD         21\n",
+      "SBH         21\n",
+      "AwayTeam    21\n",
+      "FTAG        21\n",
+      "SBD         21\n",
       "Div         21\n",
       "B365A       21\n",
-      "IWH         21\n",
-      "B365H       21\n",
-      "GBD         21\n",
+      "SBA         21\n",
+      "IWA         21\n",
+      "GBA         21\n",
       "WHA         21\n",
-      "SBH         21\n",
+      "GBD         21\n",
+      "HTAG        21\n",
+      "Date        21\n",
+      "GBH         21\n",
+      "FTR         21\n",
+      "HomeTeam    21\n",
+      "LBD         19\n",
       "LBA         19\n",
       "LBH         19\n",
-      "LBD         19\n",
-      "BWA         14\n",
       "BWD         14\n",
       "BWH         14\n",
-      "BbMxH       10\n",
-      "BbMx<2.5    10\n",
-      "BbMxAHA     10\n",
-      "BbMxAHH     10\n",
-      "BbAHh       10\n",
-      "BbAv>2.5    10\n",
-      "BbAH        10\n",
-      "BbAvD       10\n",
-      "BbMx>2.5    10\n",
+      "BWA         14\n",
       "BbOU        10\n",
-      "BbAvAHH     10\n",
-      "BbMxD       10\n",
-      "BbAvAHA     10\n",
-      "SJH         10\n",
-      "SJD         10\n",
+      "VCA         10\n",
       "SJA         10\n",
-      "BbMxA       10\n",
-      "BbAvA       10\n",
+      "BbMxD       10\n",
       "VCH         10\n",
+      "BbMxAHA     10\n",
+      "BbAvAHH     10\n",
+      "BbMxAHH     10\n",
+      "BbAvH       10\n",
+      "BbMx>2.5    10\n",
+      "BbAv>2.5    10\n",
+      "SJH         10\n",
+      "VCD         10\n",
+      "BbAH        10\n",
+      "BbAHh       10\n",
+      "BbMx<2.5    10\n",
+      "BbMxA       10\n",
+      "SJD         10\n",
+      "BbAvAHA     10\n",
       "Name: column, dtype: int64\n"
      ]
     }
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -869,7 +869,7 @@
        "10    B365H  JupilerLeague      Belgium"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -882,16 +882,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
+       "GBH      21\n",
        "SBH      21\n",
        "IWH      21\n",
        "B365H    21\n",
-       "GBH      21\n",
        "WHH      21\n",
        "LBH      19\n",
        "BWH      14\n",
@@ -901,7 +901,7 @@
        "Name: column, dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1130,7 +1130,7 @@
        "WHH            4     2      1  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
